terraform/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: api
  name: api
  namespace: "531"
spec:
  ingressClassName: traefik
  rules:
  - host: api.bakseter.net
    http:
      paths:
      - backend:
          service:
            name: svc-531
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.bakseter.net
    secretName: api-issuer-secret
